--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,9 @@ requires = ["setuptools>=61.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "crimson-formatter"
+name = "{name_space}-{module_name}"
 version = "0.1.0"
-description = "Template Tools"
+description = {description}
 readme = "README.md"
 authors = [
   { name="Sisung Kim", email="sisung.kim1@gmail.com" },
@@ -22,11 +22,9 @@ classifiers = [
 ]
 dependencies = [
     "pydantic",
-    "crimson-templator",
-    "pandas",
 ]
 requires-python = ">=3.9"
 
 [project.urls]
-"Homepage" = "https://github.com/crimson206/formatter"
-"Bug Tracker" = "https://github.com/crimson206/formatter/issues"
+"Homepage" = "https://github.com/crimson206/{module_name}"
+"Bug Tracker" = "https://github.com/crimson206/{module_name}/issues"
