--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,11 +2,16 @@ name: Release Workflow
 
 on:
   pull_request:
-    branches: [ main, 'release/*']
+    branches:
+      - main
+    types: [closed]
+    paths:
+      - 'release/*'
   workflow_dispatch:
 
 jobs:
   build-and-release:
+    if: github.event.pull_request.merged == true && startsWith(github.event.pull_request.head.ref, 'release/')
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
