--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,8 @@ requires = ["setuptools>=61.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "None-None"
-version = "0.1.0"
+name = "crimson-env-template"
+version = "0.1.0b1"
 description = "None"
 readme = "README.md"
 authors = [
@@ -22,9 +22,14 @@ classifiers = [
 ]
 dependencies = [
     "pydantic",
+    "crimson-templator",
 ]
 requires-python = ">=3.9"
 
+
 [project.urls]
-"Homepage" = "https://github.com/crimson206/None"
-"Bug Tracker" = "https://github.com/crimson206/None/issues"
+"Homepage" = "https://github.com/crimson206/env-template"
+"Bug Tracker" = "https://github.com/crimson206/env-template/issues"
+
+[project.scripts]
+env-template = "crimson.env_template.cli:main"
