--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,10 @@ authors = [
 
 classifiers = [
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
 
     "Intended Audience :: Developers",
     "Topic :: Software Development :: Build Tools",
