made release.yaml able to be triggered by main

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,17 +1,11 @@
 name: Release Workflow
 
 on:
-  pull_request:
-    branches:
-      - main
-    types: [closed]
-    paths:
-      - 'release/*'
   workflow_dispatch:
 
 jobs:
   build-and-release:
-    if: github.event.pull_request.merged == true && startsWith(github.event.pull_request.head.ref, 'release/')
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
