--- a/.github/workflows/python-test.yaml
+++ b/.github/workflows/python-test.yaml
@@ -34,13 +34,5 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Run tests with coverage
       run: |
-        coverage run --source=. -m unittest discover -s ./test -p "test_*.py"
-        coverage xml
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-        file: ./coverage.xml
-        flags: unittests
-        name: codecov-umbrella
-        fail_ci_if_error: true
+        pytest --cov=src/crimson/{module_name} --cov-report=html
+
