--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,32 +3,40 @@ requires = ["setuptools>=61.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "None-None"
+name = "crimson-templator-requirements"
 version = "0.1.0"
-description = "None"
+description = "requirements file templates."
 readme = "README.md"
 authors = [
   { name="Sisung Kim", email="sisung.kim1@gmail.com" },
 ]
 
 classifiers = [
-    "Programming Language :: Python :: 3",
+    "Development Status :: Pre-Alpha",
+
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
 
     "Intended Audience :: Developers",
-    "Topic :: Software Development :: Build Tools",
 
+    "Topic :: Software Development :: write",
+    "Topic :: Software Development :: your",
+    "Topic :: Software Development :: tags",
+    
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
+
+    "Typing :: Typed",
+
 ]
 dependencies = [
-    "pydantic",
+    pydantic,
+    
 ]
 requires-python = ">=3.9"
 
 [project.urls]
-"Homepage" = "https://github.com/crimson206/None"
-"Bug Tracker" = "https://github.com/crimson206/None/issues"
+"Homepage" = "https://github.com/crimson206/requirements"
+"Bug Tracker" = "https://github.com/crimson206/requirements/issues"
