--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ classifiers = [
 
 ]
 dependencies = [
-    "crimson-intelli-type>=0.3,<0.4",
+    "crimson-intelli-type==0.4.0",
     
 ]
 requires-python = ">=3.9"
