--- a/.github/workflows/python-test.yaml
+++ b/.github/workflows/python-test.yaml
@@ -34,5 +34,35 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Run tests with coverage
       run: |
-        pytest --cov=src/crimson/{module_name} --cov-report=html
+      name: Test
+
+on:
+  pull_request:
+    branches: [ main, develop, 'release/*', 'feature/*' ]
+  workflow_dispatch:
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v3
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install flake8
+        pip install setuptools wheel
+        pip install -r requirements_test.txt
+        pip install .
+    - name: Run tests with coverage
+      run: |
+        pytest --nbval --cov=src/crimson --cov-report=html
 
