weakened test root

--- a/pytest.ini
+++ b/pytest.ini
@@ -8,7 +8,7 @@ testpaths =
     example
 
 # 노트북 파일에 대한 nbval 설정 추가
-addopts = --nbval --cov=src/crimson/{module_name} --cov-report=html
+addopts = --nbval --cov=src/crimson --cov-report=html
 
 # 노트북 파일만 선택하는 설정
 collect_ignore = []
